=== HEAD

* Make tactical_eager_loading plugin work for limited associations (jeremyevans)

* Add PlaceholderLiteralizer#with_dataset, for returning a new literalizer using a modified dataset (jeremyevans)

* Support active_model 4.2.0beta1 in the active_model plugin (jeremyevans)

* Make Dataset#insert in the informix adapter return last inserted id (jihwans) (#887)

* Support :nolog option in the informix adapter to disable transactions (jihwans) (#887)

* Remove optional argument for Postgres::{JSON,JSONB}Op#to_record and #to_recordset (jeremyevans)

* Add support for FoundationDB SQL Layer, via fdbsql and jdbc/fdbsql adapters (ScottDugas, jeremyevans) (#884)

* Work around bug in old versions of MySQL when schema dumping a table with multiple timestamp columns (jeremyevans) (#882)

* Support more array types by default in the pg_array extension, such as xml[] and uuid[] (jeremyevans)

* Add Sequel::Model.cache_associations accessor, which can be set to false to not cache association metadata (jeremyevans)

* Add split_values plugin, for moving noncolumn entries from the values hash into a separate hash (jeremyevans) (#868)

=== 4.14.0 (2014-09-01)

* Raise original exception if there is an exception raised when rolling back transaction/savepoint (jeremyevans) (#875)

* Allow delayed evaluation blocks to take dataset as an argument (jeremyevans)

* Allow more types as filter expressions, only specifically disallow Numeric/String expressions (jeremyevans)

* Remove objects from cached association array at time of nested_attributes call instead of waiting until save (jeremyevans)

* Handle composite primary keys when working around validation issues for one_to_(one|many) associations in nested_attributes plugin (jeremyevans) (#870)

* Recognize additional disconnect error in jdbc/jtds adapter (jeremyevans)

* Have association_join work with existing model selections (jeremyevans)
